# MetaQuest-VR-Streaming

./: .gitattributes  BUILD_INSTRUCTIONS.txt
src/tests/hello_xr/: AndroidManifest.xml  CMakeLists.txt  build.gradle  common.h  decoder.cpp  decoder.h  graphicsplugin.h  graphicsplugin_d3d11.cpp  graphicsplugin_d3d12.cpp  graphicsplugin_opengl.cpp  graphicsplugin_opengles.cpp  graphicsplugin_vulkan.cpp  main.cpp  openxr_program.cpp  options.h  pipeline.cpp  pipeline.h  settings.gradle
src/tests/hello_xr/nativelib/: static_gstreamer.c  static_gstreamer.h
src/tests/hello_xr/src/org/quest_teleop/xr_native/: XrNativeActivity.java
src/tests/hello_xr/vulkan_shaders/: frag.spv  shader.frag  vert.spv
